[project]
name = "currentvalue"
version = "0.1.0"
description = ""
authors = [
    {name = "Matviy",email = "krugovcovmatvey@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.5"
dependencies = [
    "websockets (==10.4)",
    "names (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
